In the Collaboration section, engineer hub is not visible. Which is being fixed by adding extra css

--- a/src/components/Home/collaboration/Collab.css
+++ b/src/components/Home/collaboration/Collab.css
@@ -492,3 +492,7 @@
     height: 170vh;
   }
 }
+
+.brightness{
+  filter:brightness(0.3)
+}
